Server/eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my_server-service
spec:
  type: ClusterIP
  selector:
    app: my_server
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 3000
