Server/eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my_server-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: "my_server-domain.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my_server-service
                port:
                  number: 8000

    - host: "my_app-domain.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my_server-service
                port:
                  number: 8080
  tls:
    - hosts:
        - "my_app-domain.com"
        - "my_server-domain.com"
      secretName: app-cert
